--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@
 
  :root {
   /* colors */
-  --link-color: #035fe6;
+  --link-color: #284b9b;
   --link-hover-color: #136ff6;
   --background-color: #fff;
   --overlay-background-color: #eee;
@@ -20,7 +20,8 @@
   --text-color: #000;
 
   /* fonts */
-  --body-font-family: roboto, roboto-fallback;
+  --ff-source-sans-pro: 'Source Sans Pro', sans-serif;
+  --body-font-family: var(--ff-source-sans-pro);
   --heading-font-family: var(--body-font-family);
   --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
 
@@ -61,6 +62,10 @@
   }
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-size: var(--body-font-size-m);
   margin: 0;
@@ -82,14 +87,24 @@ header {
 h1, h2, h3,
 h4, h5, h6 {
   font-family: var(--heading-font-family);
-  font-weight: 600;
+  font-weight: 700;
   line-height: 1.25;
-  margin-top: 1em;
-  margin-bottom: .5em;
-  scroll-margin: calc(var(--nav-height) + 1em);
 }
 
-h1 { font-size: var(--heading-font-size-xxl) }
+h1 { 
+  font-size: 1.75rem;
+  margin-top: 0;
+  margin-bottom: 30px;
+  padding: 0 15px;
+}
+
+@media (max-width: 767px) {
+  h1 {
+    font-size: 1.375rem;
+  }
+}
+
+
 h2 { font-size: var(--heading-font-size-xl) }
 h3 { font-size: var(--heading-font-size-l) }
 h4 { font-size: var(--heading-font-size-m) }
@@ -228,21 +243,10 @@ main img {
   width: 100%;
 }
 
-main .section {
-  padding: 64px 16px;
-}
-
-@media (min-width: 600px) {
-  main .section {
-    padding: 64px 32px;
-  }
-}
-
-@media (min-width: 900px) {
-  .section > div {
-    max-width: 1200px;
-    margin: auto;
-  }
+.section > div {
+  max-width: 1170px;
+  width: calc(90% + 30px);
+  margin: auto;
 }
 
 /* section metadata */
