--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,7 +17,7 @@
   --background-color: #fff;
   --overlay-background-color: #eee;
   --highlight-background-color: #ccc;
-  --text-color: #000;
+  --text-color: #0a1414;
 
   /* fonts */
   --ff-source-sans-pro: 'Source Sans Pro', sans-serif;
