--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -49,7 +49,7 @@
 
 .card.with-border .card-image {
   height: 155px;
-  margin-bottom: 30px;
+  margin-bottom: 30pxf;
 }
 
 .card.with-border > a {
