--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -12,18 +12,6 @@
   justify-content: flex-start;
 }
 
-.cards.columns-3 .card {
-  width: calc(33.3333% - 15px);
-}
-
-.cards.columns-4 .card {
-  width: calc(25% - 15px);
-}
-
-.cards.columns-5 .card {
-  width: calc(20% - 25px);
-}
-
 .card {
   width: calc(25% - 15px); /* default 4 columns */
   backface-visibility: hidden;
@@ -34,7 +22,7 @@
 }
 
 .card.with-border {
-  box-shadow: 0 1px 6px 1px rgba(64,64,64,.15);
+  box-shadow: 0 1px 6px 1px rgba(64 64 64 / 15%);
   border-radius: 8px;
   margin: 10px 0;
 }
@@ -49,16 +37,12 @@
 
 .card.with-border .card-image {
   height: 155px;
-  margin-bottom: 30pxf;
+  margin-bottom: 30px;
 }
 
 .card.with-border > a {
   display: block;
   margin: 0 auto;
-  margin-top: 0px;
-  margin-right: auto;
-  margin-bottom: 0px;
-  margin-left: auto;
   padding: 24px 0;
   width: 85%;
   z-index: 2;
@@ -109,10 +93,55 @@
 
 .card .card-body p strong {
   font-weight: 700;
+  font-size: 1.375rem;
 }
 
-.card .card-body p strong {
-  font-size: 1.375rem;
+.cards.columns-3 .card {
+  width: calc(33.3333% - 15px);
+}
+
+.cards.columns-4 .card {
+  width: calc(25% - 15px);
+}
+
+.cards.columns-5 .card {
+  width: calc(20% - 25px);
+}
+
+
+@media (max-width: 1023px) {
+  .cards.columns-4 .card {
+    width: calc(50% - 10px);
+  }
+
+  .cards.columns-5 .card {
+    width: 50%;
+  }
+
+  .cards.columns-3 .card {
+    width: calc(50% - 10px);
+  }
+
+  .cards.columns-3 .card:nth-child(n+3) {
+    margin-top: 50px;
+  }
+}
+
+@media (max-width: 767px) {
+  .cards.columns-5 .card {
+    width: 100%;
+  }
+}
+
+@media (max-width: 599px) {
+  .cards.columns-3 .card {
+    width: 100%;
+    margin-top: 30px;
+  }
+
+  .cards.columns-4 .card {
+    width: 100%;
+  }
 }
 
 .card.with-border .card-body p:first-child,
@@ -122,6 +151,7 @@
   font-size: 1rem;
   line-height: 1.5;
 }
+
 
 
 
