--- a/styles/styles.css
+++ b/styles/styles.css
@@ -88,6 +88,10 @@ header {
   height: var(--nav-height);
 }
 
+main {
+  overflow-x: hidden;
+}
+
 h1, h2, h3,
 h4, h5, h6 {
   font-family: var(--heading-font-family);
