--- a/blocks/underlined-heading/underlined-heading.css
+++ b/blocks/underlined-heading/underlined-heading.css
@@ -1,12 +1,11 @@
 /* reduces heading margin */
-.underlined-heading div div > * {
-    margin: 0;
+.underlined-heading div div {
+    border-bottom: 1px solid #989090;
+    margin-bottom: 40px;
+    padding-bottom: 10px;
+    width: 100%;
 }
 
-.underlined-heading hr{
-    background: #989090;
-    border: none;
-    height: 1px;
-    width: 100%;
-    margin: 5px 0;
+.underlined-heading div div> * {
+    margin: 0;
 }
