--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,35 +12,35 @@
 
  :root {
   /* colors */
-  --link-color: #284b9b;
-  --link-hover-color: #136ff6;
-  --background-color: #fff;
-  --overlay-background-color: #eee;
-  --highlight-background-color: #ccc;
   --text-color: #0a1414;
+  --link-color: #284b9b;
+  --link-hover-color: #284b9b;
+  --background-color: #fff;
+  --overlay-background-color: #323264;
+  --highlight-background-color: #f5f5f0;
 
   /* fonts */
-  --ff-source-sans-pro: 'Source Sans Pro', sans-serif;
+  --ff-source-sans-pro: 'Source Sans Pro', helvetica, arial, sans-serif;
   --body-font-family: var(--ff-source-sans-pro);
   --heading-font-family: var(--body-font-family);
   --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
 
   /* body sizes */
-  --body-font-size-m: 22px;
-  --body-font-size-s: 18px;
-  --body-font-size-xs: 16px;
+  --body-font-size-l: 18px;
+  --body-font-size-m: 16px;
+  --body-font-size-s: 14px;
+  --body-font-size-xs: 13.008px;
 
   /* heading sizes */
   --heading-font-size-xxl: 48px;
   --heading-font-size-xl: 40px;
-  --heading-font-size-l: 32px;
-  --heading-font-size-m: 24px;
-  --heading-font-size-s: 20px;
-  --heading-font-size-xs: 18px;
+  --heading-font-size-l: 28px;
+  --heading-font-size-m: 22px;
+  --heading-font-size-s: 18px;
+  --heading-font-size-xs: 16px;
 
   /* nav height */
   --nav-height: 64px;
-
 }
 
 @font-face {
@@ -70,10 +70,15 @@ body {
   font-size: var(--body-font-size-m);
   margin: 0;
   font-family: var(--body-font-family);
-  line-height: 1.6;
+  line-height: 1.5;
   color: var(--text-color);
   background-color: var(--background-color);
   display: none;
+}
+
+::selection {
+  background: #000;
+  color: #fff;
 }
 
 body.appear {
@@ -88,7 +93,11 @@ h1, h2, h3,
 h4, h5, h6 {
   font-family: var(--heading-font-family);
   font-weight: 700;
-  line-height: 1.25;
+  line-height: 1.3;
+}
+
+h4, h5, h6 {
+  line-height: 1.5;
 }
 
 h1 { 
