--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,6 +17,7 @@
   --link-hover-color: #284b9b;
   --background-color: #fff;
   --overlay-background-color: #323264;
+  --overlay-font-color: #fff;
   --highlight-background-color: #f5f5f0;
 
   /* fonts */
@@ -40,7 +41,7 @@
   --heading-font-size-xs: 16px;
 
   /* nav height */
-  --nav-height: 149px;
+  --nav-height: 179px;
 }
 
 @font-face {
