--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -18,6 +18,28 @@
 .columns > div > .columns-img-col img {
   display: block;
 }
+.dotw{
+  background-color: #01A0C0;
+  border-radius: 0.5rem;
+  color: white;
+  padding: 0.5rem;
+  margin-block: 1rem;
+}
+.dotw p{
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  gap:  0.5rem;
+  margin: 0 0 0.5rem;
+}
+
+.dotw p span{
+  font-size: 16px;
+}
+.dotw .large-text{
+  font-size: 32px;
+}
 
 @media (min-width: 900px) {
   .columns > div {
@@ -29,5 +51,18 @@
   .columns > div > div {
     flex: 1;
     order: unset;
+  }
+  .dotw{
+    padding: 1rem;
+    margin-block: 1rem;
+  }
+  .dotw p{
+    margin: 1rem 0;
+  }
+  .dotw p span{
+    font-size: 28px;
+  }
+  .dotw .large-text{
+    font-size: 56px;
   }
 }
