--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -40,6 +40,30 @@
 .dotw .large-text{
   font-size: 32px;
 }
+.promo{
+  border-bottom: 1px solid #f5f5f0;
+  margin-bottom: 2rem;
+  
+}
+
+.promo .button-container a{
+  position: relative;
+  display: block;
+  width: 100%;
+  text-align: center;
+  padding: 1rem;
+}
+.promo .button-container a::after {
+  position: absolute;
+  content: '';
+  background-color: rgba(50,50,100,.5);
+  height: 60%;
+  right: 0;
+  width: 1px;
+}
+.promo .button-container:last-child a::after{
+  width: 0;
+}
 
 @media (min-width: 900px) {
   .columns > div {
@@ -64,5 +88,8 @@
   }
   .dotw .large-text{
     font-size: 56px;
+  }
+  .promo > div {
+    gap: 0;
   }
 }
