--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -6,7 +6,10 @@ main .hero-container {
   
 main .hero {
   position: relative;
-  padding: 32px;
+  padding: 64px 32px;
+  width: 100%;
+  margin-bottom: 2rem;
+  
 }
 
 main .hero h1 {
@@ -14,6 +17,16 @@ main .hero h1 {
   margin-left: auto;
   margin-right: auto;
   color: white;
+}
+
+main .hero p {
+  margin: 0;
+  line-height: 1.2;
+  text-align: center;
+}
+
+main .hero p:first-of-type{
+  font-size: 20px;
 }
 
 main .hero picture {
@@ -24,10 +37,36 @@ main .hero picture {
   bottom: 0;
   right: 0;
   object-fit: cover;
-  box-sizing: border-box;
 }
 
 main .hero img {
   object-fit: cover;
   width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+}
+
+main .alt-hero1,
+main .alt-hero2{
+ padding: 32px;
+}
+
+main .alt-hero1 p:last-of-type,
+main .alt-hero2 p:last-of-type{
+ font-size: 14px;
+}
+
+main .alt-hero1 img{
+  border-radius: 0;
+}
+
+main .alt-hero2{
+  color: white;
+}
+
+@media only screen and (min-width:768px) {
+  main .hero p{
+    width: 75%;
+    text-align: left;
+  }
 }
