--- a/blocks/categories/categories.css
+++ b/blocks/categories/categories.css
@@ -1,37 +1,29 @@
 .categories {
     display: flex;
     flex-direction: row;
-    /*align-self: flex-end;
-    justify-content: flex-start;*/
     flex-wrap: wrap; 
 }
 
 .categories > div {
     display: flex;
     flex-direction: column;
-    /*flex: 1;*/
     border: 2px solid var(--highlight-background-color);
     background-color: var(--background-color);
     border-radius: 8px;
     margin: 0 25px 25px 0;
     width: 45%;
-    flex-basis: auto;
     flex-direction: unset;
-    /*gap: 32px;*/
   }
   
   .categories img {
-    /*width: 100%;*/
-    top: auto; /*here*/
+    top: auto; 
     bottom: 0;
     min-width: 170px;
-    min-height: auto;
     left: -60px;
-    object-fit: cover; /*to here*/
+    object-fit: cover; 
   }
   
   .categories > div > div {
-    /*order: 1;*/
     flex: 1;
     order: unset;
     padding: 10px 10px 10px 10px;
@@ -42,34 +34,29 @@
   }
   
   .categories > div > .categories-img-col {
-    /*order: 0;*/
     flex: 0.35;
     padding: 0px 0px 0px 0px !important;
     align-self: flex-end;
     justify-content: flex-start;
-    height: auto;
     overflow: hidden;
-    /*min-width: 105x;*/
   }
   
   .categories > div > .categories-img-col img {
-    /*width: 100%;*/
     top: auto;
     bottom: 0;
     min-width: 200px;
-    min-height: auto;
     left: -70px;
-    /*aspect-ratio: 4 / 3;*/
     object-fit: cover;
     position: relative;
-    margin-left: 0;
-    margin-bottom: 0;
-    width: 95px;
     display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
   }
   
+  .categories a.button:any-link, .categories button {
+    background-color: #fff;
+    color: #284b9b;
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+  }
   
   @media (max-width: 900px) {
     .categories > div {
@@ -77,4 +64,3 @@
     }
 
   }
-  
