--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -19,6 +19,7 @@
   margin: 0;
   padding: 0;
   vertical-align: baseline;
+  height: unset !important;      /* overwrite external CSS */
 }
 
 .card > a {
