--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -8,6 +8,12 @@
   flex-wrap: nowrap;
   overflow-x: scroll;
   gap: 1rem;
+  padding: 1rem;
+  
+}
+
+.carousel>ul::-webkit-scrollbar{
+  display: none;
 }
 
 .carousel>ul>li{
