--- a/blocks/sidepanel/sidepanel.css
+++ b/blocks/sidepanel/sidepanel.css
@@ -66,7 +66,7 @@
     width: 83.333333%;
   }
 
-  .sidepanel .panel[aria-expanded="false"] h2 {
+  .sidepanel .panel-accordion[aria-expanded="false"] h2 {
     color: #284b9b;
   }
 
