--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -1,6 +1,7 @@
 .carousel{
   width: 100%;
   margin-bottom: 2rem;
+  position: relative;
 }
 
 .carousel>ul{
@@ -9,18 +10,62 @@
   overflow-x: scroll;
   gap: 1rem;
   padding: 1rem;
-  
+  list-style: none;
 }
 
 .carousel>ul::-webkit-scrollbar{
   display: none;
 }
 
-.carousel>ul>li{
-  min-width: 14rem;
-  background: #fff;
-  border-radius: 8px;
-  box-shadow: 0 1px 6px 1px rgba(64 64 64 / 15%);
-  text-align: center;
-  padding:1rem;
+/* Specific card overrides for carousel - BEGIN */
+.carousel .card {
+  width: calc(25% - 1rem);
+  flex-shrink: 0;
+}
+
+.carousel .card .card-body {
+  margin-bottom: 0;
+  color: var(--text-color);
+  text-align: left;
+}
+/* Specific card overrides for carousel - END */
+
+.carousel .carousel-nav {
+  position: absolute;
+  background: none;
+  padding: 0;
+  background-color: transparent;
+  height: 30px;
+  top: 50%;
+  width: 30px;
+  z-index: 2;
+}
+
+.carousel .carousel-nav::before {
+  z-index: 1;
+  display: block;
+  content: "";
+  background: #e4e4e4;
+  height: 30px;
+  width: 30px;
+  outline: 2px solid hsla(0,0%,100%,.8);
+  outline-color: rgba(255, 255, 255, 0.8);
+  outline-style: solid;
+  outline-width: 2px;
+  position: absolute;
+  border-radius: 50%;
+}
+
+.carousel .carousel-nav .icon svg {
+  fill: #8a8a8a;
+  width: 12px;
+  z-index: 2;
+}
+
+.carousel .carousel-nav.carousel-nav-left {
+  left: 0;
+}
+
+.carousel .carousel-nav.carousel-nav-right {
+  right: 0;
 }
