--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -25,6 +25,14 @@ main .hero p {
   text-align: center;
 }
 
+main .hero a{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 main .hero p:first-of-type{
   font-size: 20px;
 }
