--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -22,7 +22,7 @@
 .columns.dotw {
   background-color: #01A0C0;
   border-radius: 0.5rem;
-  color: white;
+  color: var(--overlay-font-color);
   padding: 0.5rem;
   margin-block: 1rem;
 }
@@ -50,22 +50,25 @@
   display: block;
   width: 100%;
   text-align: center;
-  font-weight: bold;
   padding: 1rem;
-  border-bottom: 1px solid #f5f5f0;
 }
 
 
-.columns.promo .button-container a:hover::after {
+.columns.promo .button-container a::after {
   position: absolute;
   content: '';
   bottom: 0;
-  left: 0;
-  width: 100%;
+  left: 5%;
+  width: 90%;
   height: 2px;
-  background-color: #284b9b;
+  background-color: var(--link-color);
+  transform: scaleX(0);
 }
 
+.columns.promo .button-container a:hover::after {
+  transform: scaleX(1);
+  transition: 0.3s;
+}
 
 @media (min-width: 900px) {
   .columns>div {
@@ -97,28 +100,25 @@
   }
 
   .columns.promo {
-    border-bottom: 1px solid #f5f5f0;
+    border-bottom: 1px solid var(--highlight-background-color);
     margin-bottom: 2rem;
   }
 
   .columns.promo>div {
     gap: 0;
+    justify-content: center;
   }
 
   .columns.promo .button-container {
-    flex: auto;
+    flex: 1;
   }
 
-  .columns.promo .button-container a::after {
+  .columns.promo .button-container:not(:last-child) a::before {
     position: absolute;
     content: '';
     width: 1px;
     height: 60%;
-    background-color: #32326477;
+    background: rgba(50 50 100 / 50%);
     right: 0;
-  }
-
-  .columns.promo .button-container:last-child a::after {
-    width: 0;
   }
 }
