--- a/blocks/categories/categories.css
+++ b/blocks/categories/categories.css
@@ -1,117 +1,87 @@
-.categories {
+main div.categories-wrapper {
+  margin-bottom: 100px;
+}
+
+.categories > ul {
+  max-width: 730px;
+  align-items: stretch;
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  /*flex-basis: 50%;
-    flex: 0 0 50% !important;*/
-  /*overflow: hidden;
-  flex-wrap: nowrap;*/
+  justify-content: space-between;
+  list-style: none;
+  padding: 0;
 }
 
-.categories>div {
+.categories > ul > li {
+  margin-bottom: 20px;
+  margin-top: 0;
+  width: calc(50% - 10px);
+}
+
+.categories .category {
   display: flex;
-  flex-direction: unset;
-  border: 2px solid var(--highlight-background-color);
-  background-color: var(--background-color);
-  border-radius: 8px;
-  margin: 0 25px 25px 0;
-  /*width: 45%;*/
   width: 100%;
+  overflow: hidden;
+  flex-wrap: nowrap;
+  padding: 0;
   max-width: 350px;
-  /*flex-basis: 45% !important;*/
-
+  border: 1px solid #989090;
+  box-shadow: none;
+  background: #fff;
+  border-radius: 8px;
+  height: 100%;
 }
 
-/*
-.categories img {
-  /*top: auto;
-  bottom: 0;
-  min-width: 170px;
-  left: -60px;
-  object-fit: cover;*/
-/*
+.categories h3 {
+  margin-top: 10px;
+  font-size: 1.125rem;
+  line-height: 1.33;
+  font-weight: 400;
+}
+
+.categories .category .category-image {
+  position: relative;
+  margin: 0;
+  width: 95px;
+  height: 100%;
+  overflow: hidden;
+  min-width: 95px;
+}
+
+.categories .category .category-image img {
   top: auto;
   bottom: 0;
   min-width: 170px;
   min-height: auto;
   left: -60px;
-}*/
+  position: absolute;
+  object-fit: cover;
+  width: 100%;
+}
 
-.categories>div>div {
-  /*flex: 1;
-  order: unset;
-  padding: 10px 10px 10px 10px;*/
-
-  margin-left: 0;
+.categories .category .category-body {
   padding: 10px;
 }
 
-/*.categories>div>div>p {
-  margin: 8px 0px 8px 0px;
-}*/
-
-.categories>div>.categories-img-col {
-  /*flex: 0.35;
-  padding: 0px 0px 0px 0px !important;
-  align-self: flex-end;
-  justify-content: flex-start;
-  overflow: hidden;*/
-
-  position: relative;
-  margin-left: 0;
-  margin-bottom: 0;
-  width: 95px;
-  height: auto;
-  overflow: hidden;
-  min-width: 95px;
-  padding: 0px;
-
+.categories .category .category-body .category-links {
+  padding-top: 5px;
 }
 
-.categories>div>.categories-img-col img {
-  /*top: auto;
-  bottom: 0;
-  min-width: 200px;
-  left: -70px;
-  object-fit: cover;
-  position: relative;
-  display: flex;*/
-
-  /*top: auto;
-  bottom: 0;
-  min-width: 170px;
-  min-height: auto;
-  left: -60px;
-  position: relative;
-  display: flex;*/
-  position: relative;
-  top: auto;
-  bottom: 0;
-  min-width: 170px;
-  min-height: auto;
-  left: -60px;
+.categories .category .category-body .category-links li {
+  margin: 0;
+  padding: 0;
 }
 
-.categories a.button:any-link,
-.categories button {
-  background-color: #fff;
-  color: #284b9b;
-  padding: 0 0 0 0;
-  margin: 0 0 0 0;
+.categories .category .category-body .category-links li a {
+  display: flex;
+  padding: 8px 0;
+  width: 100%;
+  line-height: 1.3;
 }
 
-.categories a:hover {
-  text-decoration: underline;
-  color: #284b9b;
-}
-
-.categories strong {
-  font-weight: normal;
-}
-
-@media (max-width: 900px) {
-  /*.categories>div {
-    width: 55%;
-  }*/
-
+@media (max-width: 767px) {
+  .categories > ul > li {
+    padding: 0;
+    width: 100%;
+  }
 }
