--- a/blocks/categories/categories.css
+++ b/blocks/categories/categories.css
@@ -8,7 +8,6 @@ main div.categories-wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  list-style: none;
   padding: 0;
 }
 
@@ -33,6 +32,7 @@ main div.categories-wrapper {
 }
 
 .categories h3 {
+  margin: 0;
   margin-top: 10px;
   font-size: 1.125rem;
   line-height: 1.33;
@@ -64,6 +64,8 @@ main div.categories-wrapper {
 }
 
 .categories .category .category-body .category-links {
+  padding: 0;
+  margin: 0;
   padding-top: 5px;
 }
 
