--- a/blocks/faq/faq.css
+++ b/blocks/faq/faq.css
@@ -8,8 +8,8 @@ main .faq .faq-accordion {
     height: auto;
     background-color: white;
     border-radius: 4px;
-    border-bottom: 0.67px solid rgb(225, 225, 225);
-    border-top: 0.67px solid rgb(225, 225, 225);
+    border-bottom: 0.67px solid rgb(225 225 225);
+    border-top: 0.67px solid rgb(225 225 225);
     margin-top: -0.67px;
 }
 
