--- a/blocks/faq/faq.css
+++ b/blocks/faq/faq.css
@@ -4,7 +4,7 @@ main .faq {
 
 main .faq .faq-accordion {
     position: relative;
-    width: 100%;;
+    width: 100%;
     height: auto;
     background-color: white;
     border-radius: 4px;
