--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -3,13 +3,13 @@
   margin-bottom: 2rem;
   position: relative;
 }
+  
 
 .carousel>ul {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: scroll;
-  gap: 1rem;
-  padding: 1rem;
+  gap: 2rem;
   list-style: none;
   scroll-behavior: smooth;
   scroll-snap-type: x mandatory;
@@ -17,6 +17,7 @@
 
 .carousel>ul>li {
   scroll-snap-align: start;
+  
 }
 
 .carousel>ul::-webkit-scrollbar {
@@ -25,7 +26,7 @@
 
 /* Specific card overrides for carousel - BEGIN */
 .carousel .card {
-  width: 30rem;
+  max-width: 28rem;
   flex-shrink: 0;
 }
 
@@ -43,7 +44,6 @@
   width: 100%;
   height: 100%;
   display: flex;
-  /* align-items: center; */
   justify-content: space-between;
   padding: 0;
   top: 0;
@@ -61,8 +61,8 @@
   background-color: #f5f5f0;
   border-radius: 50%;
   padding: 0.2rem;
-  width: 30px;
-  height: 30px;
+  width: 24px;
+  height: 24px;
 }
 
 .carousel .carousel-nav .icon svg {
@@ -75,12 +75,11 @@
 .carousel .icon-arrow-right.left-arrow {
   transform: rotate(180deg);
   z-index: 1;
-
 }
 
 @media only screen and (min-width:701px) {
   .carousel .card {
-    width: 12rem;
+    max-width: 12rem;
   }
 
   .carousel .icon-arrow-right {
