--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -2,10 +2,13 @@
   width: 100%;
   margin-bottom: 2rem;
   position: relative;
+  display: flex;
+  justify-content: center;
 }
   
 
 .carousel>ul {
+  width: 70%;
   display: flex;
   flex-wrap: nowrap;
   overflow-x: scroll;
@@ -42,6 +45,7 @@
   position: absolute;
   background: none;
   width: 100%;
+  max-width: 75%;
   height: 100%;
   display: flex;
   justify-content: space-between;
