--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -72,7 +72,7 @@ main .hero .hero-overlay strong {
     text-align: left;
     width: 100%;
     margin-top: -3px;
-    padding: 6% 6% 6% 6%;
+    padding: 6%;
     height: unset;
   }
 
