--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -8,7 +8,7 @@
   
 
 .carousel>ul {
-  width: 70%;
+  max-width: 90%;
   display: flex;
   flex-wrap: nowrap;
   overflow-x: scroll;
@@ -45,7 +45,7 @@
   position: absolute;
   background: none;
   width: 100%;
-  max-width: 75%;
+  max-width: 100%;
   height: 100%;
   display: flex;
   justify-content: space-between;
@@ -78,6 +78,12 @@
 }
 
 @media only screen and (min-width:701px) {
+  .carousel>ul{
+    max-width: 70%;
+  }
+  .carousel .carousel-nav{
+    max-width: 75%;
+  }
   .carousel .card {
     max-width: 12rem;
   }
