--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -5,10 +5,10 @@
   display: flex;
   justify-content: center;
 }
-  
+
 
 .carousel>ul {
-  max-width: 90%;
+  width: 90%;
   display: flex;
   flex-wrap: nowrap;
   overflow-x: scroll;
@@ -18,19 +18,19 @@
   scroll-snap-type: x mandatory;
 }
 
-.carousel>ul>li {
-  scroll-snap-align: start;
-  
-}
-
 .carousel>ul::-webkit-scrollbar {
   display: none;
 }
 
 /* Specific card overrides for carousel - BEGIN */
 .carousel .card {
-  max-width: 28rem;
+  width: 100%;
   flex-shrink: 0;
+  scroll-snap-align: center;
+}
+.carousel.cards-4 .card,
+.carousel.cards-5 .card{
+  width: 100%;
 }
 
 .carousel .card .card-body {
@@ -45,25 +45,22 @@
   position: absolute;
   background: none;
   width: 100%;
-  max-width: 100%;
   height: 100%;
   display: flex;
   justify-content: space-between;
-  top: 0;
-  
 }
 
-.carousel .carousel-nav button{
+.carousel .carousel-nav button {
   background: none;
   display: flex;
   align-items: center;
-  justify-content:center;
+  justify-content: center;
   padding: 1rem;
   z-index: 2;
 }
 
-.carousel .icon-arrow-right{
-  background-color: #f5f5f0;
+.carousel .icon-arrow-right {
+  background-color: var(--highlight-background-color);
   border-radius: 50%;
 }
 
@@ -78,23 +75,25 @@
 }
 
 @media only screen and (min-width:701px) {
-  .carousel>ul{
-    max-width: 70%;
+  .carousel>ul {
+    max-width: 100%;
   }
-  .carousel .carousel-nav{
-    max-width: 75%;
+
+  .carousel.cards-4 .card {
+    width: calc(100% / 4);
   }
-  .carousel .card {
-    max-width: 12rem;
+
+  .carousel.cards-5 .card {
+    width: calc(100% / 5);
   }
 
   .carousel .icon-arrow-right {
-    background: #323264;
+    background: var(--overlay-background-color);
     height: 30px;
-    width: 30px; 
+    width: 30px;
   }
 
   .carousel .carousel-nav .icon svg {
-    fill: #fff;
+    fill: var(--background-color);
   }
 }
