--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -26,7 +26,7 @@
 .carousel .card {
   width: 100%;
   flex-shrink: 0;
-  scroll-snap-align: center;
+  scroll-snap-align: start;
 }
 .carousel.cards-4 .card,
 .carousel.cards-5 .card{
