--- a/blocks/faq/faq.css
+++ b/blocks/faq/faq.css
@@ -41,10 +41,9 @@ main .faq .faq-answer {
     font-size: 18px;
     line-height: 28px;
     font-weight: 400;
-    transform: scaleY(0);
-    transform-origin: top;
-    transition: all .5s;
-    height: 0;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease-in-out;
 }
 
 main .faq .faq-answer a{
@@ -61,7 +60,6 @@ main .faq .active .faq-question {
 }
 
 main .faq .active .faq-answer {
-    transform: scaleY(1);
     height: auto;
     padding: 5px 15px 30px 0;
 }
